# python-project-50

./: .coverage  .gitignore  README.md  file1.yml  file2.yml  makefile  pyproject.toml  work_test.py
.github/workflows/: my-own-check.yml  pyci.yml
gendiff/: __init__.py
gendiff/scripts/: fs.py  gendiff.py  generate_diff.py  make_diff.py  massives.py  parsing.py
tests/: __init__.py  test_generate_diff.py
tests/fixtures/: collections.py
